--- a/gtm-mcp-server/package.json
+++ b/gtm-mcp-server/package.json
@@ -5,8 +5,10 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
+    "auth": "npm run build && node dist/auth/setup.js",
     "start": "node dist/index.js",
-    "dev": "tsx src/index.ts"
+    "dev": "tsx index.ts",
+    "selftest": "npm run -s build && node dist/scripts/selftest.js"
   },
   "keywords": ["gtm", "google-tag-manager", "mcp", "model-context-protocol"],
   "author": "",
